# dz_vector_royale

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
assets/: config.json
assets/data/: particles.json  powerups.json  tuning.json
assets/shaders/: bloom_bright.fs  blur.fs  composite.fs  flame.fs
cmake/: Dependencies.cmake
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audio_system.cpp  audio_system.h
src/core/: CMakeLists.txt  config.cpp  config.h  event_bus.cpp  event_bus.h  logging.cpp  logging.h  service_locator.h  time.cpp  time.h
src/ecs/: CMakeLists.txt  registry.h
src/game/: CMakeLists.txt  arena.h  world.cpp  world.h
src/game/ai/: behavior_tree.cpp  behavior_tree.h  blackboard.h  bot_brain.cpp  bot_brain.h  steering.cpp  steering.h
src/game/components/: ai.h  bullet.h  components.cpp  emitter_state.h  health.h  intent.h  inventory.h  physics.h  pickup.h  render_tag.h  ship.h  status_effects.h  team.h  transform.h  weapon.h
src/game/data/: tuning.cpp  tuning.h
src/game/input/: gamepad_input.cpp  gamepad_input.h  input_backend.h  input_intent.h  keyboard_mouse_input.cpp  keyboard_mouse_input.h
src/game/systems/: ai_system.cpp  ai_system.h  collision_system.cpp  collision_system.h  health_system.cpp  health_system.h  lifetime_system.cpp  lifetime_system.h  movement_system.cpp  movement_system.h  physics_system.cpp  physics_system.h  pickup_system.cpp  pickup_system.h  spatial_hash.cpp  spatial_hash.h  weapon_system.cpp  weapon_system.h
src/main/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt  desktop_platform.cpp  desktop_platform.h  iplatform.h
src/render/: CMakeLists.txt  camera.cpp  camera.h  flame_renderer.cpp  flame_renderer.h  fx_bridge.h  graphics_settings.h  hud.cpp  hud.h  post_fx.cpp  post_fx.h  sprite_renderer.cpp  sprite_renderer.h
src/render/particles/: emitter_spec.cpp  emitter_spec.h  particle.h  particle_system.cpp  particle_system.h
tests/: CMakeLists.txt  test_behavior_tree.cpp  test_config.cpp  test_event_bus.cpp  test_fixed_timestep.cpp  test_spatial_hash.cpp
tools/pack/: CMakeLists.txt  main.cpp
